# nrp-k8s-setup-template

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  config_k8s.py  create_job.py  entrypoint.sh  example_job.yml  job_template.yml  pyproject.toml  rclone_filter.txt  run.sh  template_job.yml  test_script.py  your_job.yml
