[project]
name = "k8s-setup-template"
version = "0.0.0"
readme = "README.md"
requires-python = "==3.10.16"

dependencies = [
    "torch==2.4.0",
    "transformers==4.48.0",
    "nltk==3.9.1"
]

[tool.ruff]
exclude = ["bart_score.py", "__pycache__", ".venv"]
target-version = "py310"

[tool.pyright]
exclude = ["__pycache__", ".venv"]
ignore = ["bart_score.py"]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
typeCheckingMode = "strict"
pythonVersion = "3.10"
