[project]
name = "k8s-setup-template"
version = "0.0.0"
readme = "README.md"
requires-python = "==3.10.16"

dependencies = [
    "torch==2.4.0",
]

[tool.ruff]
exclude = ["unchecked_code.py", "__pycache__", ".venv"]
target-version = "py310"

[tool.pyright]
exclude = ["__pycache__", ".venv"]
ignore = ["unchecked_code.py"]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
typeCheckingMode = "strict"
pythonVersion = "3.10"
