[project]
name = "k8s-setup-template"
version = "0.0.0"
readme = "README.md"
requires-python = "==3.12.10"

dependencies = [
    "numpy==2.3.4",
    "torch==2.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-gpu" }]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
exclude = ["unchecked_code.py", "__pycache__", ".venv"]
ignore = ["E722"]
target-version = "py312"

